# src/api/controllers/app.js
@@ -4,6 +4,8 @@ import {
 } from '../../models';
 import SecuritySingleton from '../helpers/security';
 import MiddlewareSingleton from '../helpers/middleware';
+import BitGoSingleton from '../../logic/third-parties/bitgo';
+import { getNormalizedTicker } from '../../logic/third-parties/bitgo/helpers';
 
 /**
  * Description of the function.
@@ -36,6 +38,40 @@ async function setMaxWithdraw(req, res) {
         let data = await wallet.setMaxWithdraw();
         MiddlewareSingleton.respond(res, req, data);
     } catch (err) {
+        MiddlewareSingleton.respondError(res, err);
+    }
+}
+
+/**
+ *
+ * @param {*} req
+ * @param {*} res
+ */
+
+async function webhookBitgoDeposit(req, res) {
+    try {
+        req.body.id = req.query.id;
+        req.body.currency = req.query.currency;
+        let params = req.body;
+        let hooks = Array.isArray(params) ? params : [params];
+        let data = await Promise.all(hooks.map(async wB => {
+            try {
+                // Get Info from WebToken
+                const wBT = await BitGoSingleton.getTransaction({ id: wB.transfer, wallet_id: wB.wallet, ticker: getNormalizedTicker({ ticker: wB.coin }) });
+                if (!wBT) { return null }
+                // Verify if it is App or User Deposit /Since the App deposit is to the main MultiSign no label is given to specific address, normally label = ${user_od}
+                var isApp = !wBT.label;
+                params.wBT = wBT;
+                let app = new App(params);
+                return await app.updateWallet();
+            } catch (err) {
+                console.log(err);
+                return err;
+            }
+        }))
+        MiddlewareSingleton.respond(res, req, data);
+    } catch (err) {
+        // MiddlewareSingleton.log({type: "admin", req, code: err.code});
         MiddlewareSingleton.respondError(res, err);
     }
 }
@@ -94,5 +130,6 @@ export {
     getUserWithdraws,
     setMaxWithdraw,
     setMinWithdraw,
-    setAffiliateMinWithdraw
+    setAffiliateMinWithdraw,
+    webhookBitgoDeposit
 };
